# downquark.applicationFoss.DevQon

./: .downquark.conf  .gitignore  README.md  package.json  tsconfig.json
_notes/: devfeatures.md  devqon-structure.noml  (+1 more)
_notes/_docs/rust brush up/1.guessing_game/: Cargo.toml
_notes/_docs/rust brush up/1.guessing_game/src/: main.rs
_notes/_docs/rust brush up/4.functional/: Cargo.toml
_notes/_docs/rust brush up/4.functional/src/: closures.rs  iterators.rs  main.rs
_notes/_docs/rust brush up/5.workspace/adder/: Cargo.toml
_notes/_docs/rust brush up/5.workspace/adder/src/: main.rs
devqon/: .gitignore  (+6 more)
devqon/src-tauri/: .gitkeep  Cargo.toml  tauri.conf.json  tauri.conf.json5
devqon/src-tauri/capabilities/: default.json  migrated.json
devqon/src-tauri/config/: .gitkeep  _default.toml  development.toml  production.toml
devqon/src-tauri/devqon/services/src/: database.rs
devqon/src-tauri/devqon/symbols/src/: traits.rs
devqon/src-tauri/devqon/utils/src/: lib.rs
devqon/src-tauri/downquark/_base/commands/: Cargo.toml
devqon/src-tauri/downquark/_base/commands/src/: commands.rs  lib.rs
devqon/src-tauri/downquark/_base/commands/src/commands/: cmd.rs
devqon/src-tauri/downquark/_base/network/: Cargo.toml
devqon/src-tauri/downquark/_base/network/src/: lib.rs  network.rs
devqon/src-tauri/downquark/_base/network/src/network/: connect.rs  http.rs
devqon/src-tauri/downquark/_base/standards/: Cargo.toml
devqon/src-tauri/downquark/_base/standards/src/: lib.rs  stdlib.rs
devqon/src-tauri/downquark/_base/standards/src/stdlib/: fsio.rs
devqon/src-tauri/downquark/_base/state/: Cargo.toml
devqon/src-tauri/downquark/_base/state/src/: mutable.rs  state.rs
devqon/src-tauri/downquark/_base/state/src/immutable/: _downquark.rs
devqon/src-tauri/downquark/_base/state/src/mutable/: _downquark.rs
devqon/src-tauri/downquark/devqon/enhancements/src/: lib.rs  mechanisms.rs  widgets.rs
devqon/src-tauri/downquark/devqon/macros/: ReadMe.md
devqon/src-tauri/downquark/devqon/macros/src/: lib.rs  macros.rs
devqon/src-tauri/downquark/devqon/services/: Cargo.toml
devqon/src-tauri/downquark/devqon/symbols/: Cargo.toml  ReadMe.md
devqon/src-tauri/downquark/devqon/symbols/src/: lib.rs  structs.rs
devqon/src-tauri/downquark/devqon/symbols/src/structs/: _downquark.rs
devqon/src-tauri/downquark/devqon/utils/: Cargo.toml
devqon/src-tauri/downquark/devqon/utils/src/: configurations.rs  constants.rs  enums.rs  helpers.rs  hooks.rs  lib.rs
devqon/src-tauri/downquark/particle_flows/: Cargo.toml
devqon/src-tauri/downquark/particle_flows/src/: flows.rs  lib.rs  particles.rs
devqon/src-tauri/downquark/particle_flows/src/flows/: application_launch.rs
devqon/src-tauri/downquark/particle_flows/src/flows/application_launch/: splash.rs
devqon/src-tauri/downquark/particle_flows/src/particles/: content.rs  network.rs  services.rs  standards.rs  symbols.rs
devqon/src-tauri/downquark/particle_flows/src/particles/design_patterns/: command.rs
devqon/src-tauri/downquark/particle_flows/src/particles/symbols/: macros.rs  structs.rs
devqon/src-tauri/downquark/standards/src/: stdin.rs  stdout.rs
devqon/src-tauri/downquark/state/src/: immutable.rs
devqon/src-tauri/downquark/state/src/mutable/: _downquark.rs
devqon/src-tauri/src/: lib.rs
devqon/src-tauri/workspaces/enhancements/src/: lib.rs
devqon/src-tauri/workspaces/enhancements/src/mechanisms/: database.rs
devqon/src-tauri/workspaces/enhancements/src/mechanisms/database/: query.rs
devqon/src-tauri/workspaces/macros/src/: lib.rs
devqon/src-tauri/workspaces/macros/src/persistence/: persistence.rs
devqon/src-tauri/workspaces/persistence/: Cargo.toml  _ref.md
devqon/src-tauri/workspaces/persistence/src/: database.rs  lib.rs  protocol.rs
devqon/src-tauri/workspaces/persistence/src/database/: arango.rs  common_queries.rs  maria.rs
devqon/src-tauri/workspaces/persistence/src/db/: maria.rs
devqon/src-tauri/workspaces/utils/: Cargo.toml
devqon/src-tauri/workspaces/utils/src/: configuration.rs  configurations.rs  constants.rs  lib.rs  logging.rs
devqon/src-tauri/workspaces/utils/src/constants/: enumerate.rs  templates.rs
devqon/src-tauri/workspaces/utils/src/helpers/: build.rs  commands.rs  state.rs
devqon/src-tauri/workspaces/utils/src/helpers/commands/: _devqon.rs
devqon/src-tauri/workspaces/utils/src/helpers/standards/: fsio.rs
devqon/src-tauri/workspaces/utils/src/helpers/state/: _devqon.rs  configuration.rs
tauri-plugins/: Cargo.toml  TODO.md
tauri-plugins/plugins/downquark-startup/: Cargo.toml  README.md  package.json
tauri-plugins/plugins/downquark-startup/.changes/: config.json  initial-release.md  readme.md
tauri-plugins/plugins/downquark-startup/examples/tauri-app/: package.json
tauri-plugins/plugins/downquark-startup/examples/tauri-app/src/: App.svelte
tauri-plugins/plugins/downquark-startup/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugins/plugins/downquark-startup/examples/tauri-app/src-tauri/src/: main.rs
tauri-plugins/plugins/downquark-startup/src/: lib.rs
tauri-plugins/plugins/downquark-startup/webview-src/: index.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/plugins/: .gitkeep
tauri/src-tauri/src/: lib.rs  main.rs
tauri/src-tauri/workspaces/enhancements/: .gitkeep  Cargo.toml
tauri/src-tauri/workspaces/enhancements/enhancements/: Cargo.toml
tauri/src-tauri/workspaces/enhancements/mechanisms/: Cargo.toml
tauri/src-tauri/workspaces/enhancements/widgets/: Cargo.toml
tauri/src-tauri/workspaces/utils/: .gitkeep  Cargo.toml
tauri/src-tauri/workspaces/utils/hooks/: Cargo.toml
tauri/src-tauri/workspaces/utils/logging/: Cargo.toml
tauri/src-tauri/workspaces/utils/src/: helpers.rs
tauri/src-tauri/workspaces/utils/src/constants/: enumerate.rs
tauri/src-tauri/workspaces/utils/src/helpers/: build.rs  commands.rs  state.rs  system_tray.rs
tauri/src-tauri/workspaces/utils/src/helpers/commands/: _devqon.rs
tauri/src-tauri/workspaces/utils/src/helpers/state/: _devqon.rs
tauri/src-tauri/workspaces/utils/utils/: Cargo.toml
(+97 files in other folders)
