# https://beta.tauri.app/references/v2/config/
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Permissions: https://beta.tauri.app/references/v2/acl/

[workspace]
resolver = "2"
members = [
    "./workspaces/enhancements",
    "./workspaces/macros",
    "./workspaces/persistence",
    "./workspaces/utils"
]
[workspace.package]
version = "0.3.0-pre-release"
edition = "2021"
authors = ["downquark <development.qonsole@downquark.work>"]

[package]
name = "devqon"
version = "0.3.0-pre-release"
description = "DownQuark Development Qonsole"
authors = ["downquark <development.qonsole@downquark.work>"]
license = "GNU"
repository = "https://github.com/DownQuark-Work/downquark.applicationFoss.DevQon"
default-run = "devqon"
edition = "2021"
rust-version = "1.64"

# https://beta.tauri.app/guides/develop/updating-dependencies/

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
tauri = { version = "2.0.0-beta", features = ["icon-ico", "tray-icon"] }
tauri-plugin-shell = "2.0.0-beta"

# workspace dependencies
enhancements = { path = "./workspaces/enhancements" }
macros = { path = "./workspaces/macros" }
persistence = { path = "./workspaces/persistence" }
utils = { path = "./workspaces/utils" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "devqon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
