[workspace]
resolver = "2"
members = [
    "./workspaces/enhancements",
    "./workspaces/macros",
    "./workspaces/persistence",
    "./workspaces/utils"
]
[workspace.package]
version = "0.4.0-pre-release"
edition = "2021"
authors = ["downquark <development.qonsole@downquark.work>"]

[package]
name = "devqon"
version = "0.4.0-pre-release"
description = "Development Qonsole"
authors = ["mlnck"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "devqon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = ["config-json5"] }

[dependencies]
tauri = { version = "2.0.0", features = [ "config-json5", "tray-icon", "devtools", "image-ico"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.40.0"
