[package]
name = "persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ 
  "chrono",
  "ipnetwork",
  # "macros", "migrate", #  macros and migrate features will probably be useful down the road. enable if/when needed
  "mysql",
  "runtime-async-std",
  "tls-rustls",
  ] }

macros = { path = "../macros" }