[package]
name = "utils"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
config = "0.14.0"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = ["icon-ico", "tray-icon"] }
toml = "0.8.10"

enhancements = { path = "../enhancements" }